infrastructure/galasa-plan-b-lon02/nexus/namespace.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
