infrastructure/galasa-plan-b-lon02/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      name: nexus
      labels:
        app: nexus
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: nexus
        image: sonatype/nexus3:3.23.0
#        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 5000
          name: docker
        volumeMounts:
        - name: datadir
          mountPath: /nexus-data
        resources:
          requests:
            cpu: "2"
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: nexus-pvc
