infrastructure/galasa-plan-b-lon02/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
spec:
  type: ClusterIP
  ports:
  - port: 8081
    name: http
    targetPort: 8081
  - port: 5000
    name: docker
    targetPort: 5000
  selector:
    app: nexus
