infrastructure/galasa-plan-b-lon02/nexus/ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
  - hosts:
    - docker.galasa.dev
    - nexus-planb.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: nexus-planb.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
  - host: docker.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
